# env-wizard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.sh
.github/workflows/: ci.yml  release.yml
docs/demo/: demo.tape  run.sh
src/: hint.rs  lib.rs  main.rs  parser.rs  prompt.rs  provider.rs  render.rs  repo.rs  scan.rs  writer.rs
src/config/: json_doc.rs  mod.rs  toml_doc.rs  yaml_doc.rs
tests/: parser.rs  provider.rs
