[package]
name = "env-wizard"
version = "0.1.0"
edition = "2021"
description = "Interactive assistant to fill a .env from a .env.example, with AI hints via `claude -p`."
license = "MIT"

[lib]
name = "env_wizard"
path = "src/lib.rs"

[[bin]]
name = "env-wizard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
walkdir = "2"
