[package]
name = "env-wizard"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "Interactive assistant to fill a .env from a .env.example, with AI hints from a configurable provider (cloud or local)."
authors = ["Alphonse Terrier <alphonse.terrier@polyconseil.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alphonse-terrier/env-wizard"
repository = "https://github.com/alphonse-terrier/env-wizard"
keywords = ["dotenv", "env", "cli", "ai", "onboarding"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "env_wizard"
path = "src/lib.rs"

[[bin]]
name = "env-wizard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
dirs = "5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
walkdir = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
